[gd_scene load_steps=33 format=2]

[ext_resource path="res://scenes/TileMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/textures/tile_normal_map_test_normal_map_texture.png" type="Texture" id=2]
[ext_resource path="res://scenes/YellowLight.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fonts/Anton/Anton-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/textures/tile_normal_map_test_texture.png" type="Texture" id=5]
[ext_resource path="res://scripts/World.gd" type="Script" id=6]
[ext_resource path="res://scripts/WorldEnvironment.gd" type="Script" id=7]
[ext_resource path="res://default_env.tres" type="Environment" id=8]
[ext_resource path="res://assets/textures/titlesplash.png" type="Texture" id=9]
[ext_resource path="res://scripts/CPUParticles2D.gd" type="Script" id=10]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="StreamTexture" id=2]
load_path = "res://.import/tile_normal_map_test_light_texture.png-2a53314b87c471f2fc5c588524a8123b.stex"

[sub_resource type="Curve" id=3]
max_value = 2.0
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.5, 2 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.440882, 1 )
colors = PoolColorArray( 1, 0, 0.955078, 1, 1, 0.943359, 0, 1, 1, 1, 1, 1 )

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0.382353, 0.613971, 0.819853, 0.981618, 1 )
colors = PoolColorArray( 0.10037, 0.0247192, 0.210938, 1, 0.357432, 0.112473, 0.457031, 1, 0.652344, 0.32872, 0.563853, 1, 0.995636, 1, 0.441406, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=6]
resource_local_to_scene = true
gradient = SubResource( 5 )

[sub_resource type="Environment" id=7]
resource_local_to_scene = true
background_mode = 4
tonemap_exposure = 1.69
auto_exposure_scale = 0.01
auto_exposure_max_luma = 16.0
auto_exposure_speed = 64.0
glow_enabled = true
glow_levels/1 = true
glow_levels/2 = true
glow_levels/4 = true
glow_levels/6 = true
glow_intensity = 0.7
glow_strength = 1.08
glow_bloom = 0.29
glow_blend_mode = 1
glow_bicubic_upscale = true
adjustment_enabled = true
adjustment_color_correction = SubResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 40
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 5 )
normal_map = ExtResource( 2 )
region_rect = Rect2( 0, 0, 100, 100 )

[sub_resource type="DynamicFont" id=10]
resource_local_to_scene = true
size = 60
outline_size = 6
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=11]
resource_local_to_scene = true
size = 40
outline_size = 6
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=12]
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=13]
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=14]
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=15]
resource_local_to_scene = true
size = 40
outline_size = 6
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="World" id=17]
environment = ExtResource( 8 )

[sub_resource type="ViewportTexture" id=18]
viewport_path = NodePath("TitleSplash/Viewport")

[sub_resource type="Animation" id=19]
tracks/0/type = "value"
tracks/0/path = NodePath("UIPanel:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 800, 0 ) ]
}

[sub_resource type="Animation" id=20]
tracks/0/type = "value"
tracks/0/path = NodePath("UIPanel:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 800, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "splash_in"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("TitleSplash/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 4, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TitleSplash:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=22]
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("TitleSplash/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 3, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TitleSplash:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="World" type="Node2D"]
script = ExtResource( 6 )

[node name="TileMap" parent="." instance=ExtResource( 1 )]

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
material = SubResource( 1 )
position = Vector2( 800, 450 )
emitting = false
amount = 10
lifetime = 4.0
preprocess = 5.0
texture = SubResource( 2 )
emission_shape = 2
emission_rect_extents = Vector2( 800, 450 )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 1.0
angular_velocity = 720.0
angular_velocity_random = 1.0
scale_amount = 0.05
scale_amount_random = 0.34
scale_amount_curve = SubResource( 3 )
color_ramp = SubResource( 4 )
anim_offset = 1.0
anim_offset_random = 1.0
script = ExtResource( 10 )

[node name="YellowLight" parent="." instance=ExtResource( 3 )]
energy = 0.65
shadow_enabled = false

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 7 )
script = ExtResource( 7 )

[node name="UIPanel" type="Node2D" parent="."]
visible = false
light_mask = 0
position = Vector2( 800, 0 )
z_index = 1

[node name="TogglePanelButton" type="Button" parent="UIPanel"]
self_modulate = Color( 0, 1, 0.976471, 1 )
light_mask = 0
margin_left = 710.826
margin_top = 265.0
margin_right = 796.826
margin_bottom = 654.0
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="UIPanel"]
modulate = Color( 0, 1, 0.976471, 1 )
margin_left = 800.0
margin_right = 1600.0
margin_bottom = 900.0
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="UIPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 800.0
margin_right = 1600.0
margin_bottom = 900.0
rect_clip_content = true
mouse_filter = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UIPanel/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 780.0
margin_bottom = 880.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 1

[node name="TitlePanelContainer" type="PanelContainer" parent="UIPanel/MarginContainer/VBoxContainer"]
self_modulate = Color( 0, 1, 0.976471, 1 )
margin_right = 760.0
margin_bottom = 280.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="UIPanel/MarginContainer/VBoxContainer/TitlePanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 753.0
margin_bottom = 273.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UIPanel/MarginContainer/VBoxContainer/TitlePanelContainer/MarginContainer"]
margin_top = 10.0
margin_right = 746.0
margin_bottom = 256.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5
alignment = 1

[node name="MainRichTextLabel" type="RichTextLabel" parent="UIPanel/MarginContainer/VBoxContainer/TitlePanelContainer/MarginContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0.901961 )
light_mask = 0
margin_right = 746.0
margin_bottom = 120.0
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 10 )
custom_constants/line_separation = -90
bbcode_enabled = true
bbcode_text = "[center][img]res://assets/textures/tile_normal_map_test_normal_map_texture.png[/img][img]res://assets/textures/tile_normal_map_test_normal_map_texture.png[/img][img]res://assets/textures/tile_normal_map_test_normal_map_texture.png[/img][img]res://assets/textures/tile_normal_map_test_normal_map_texture.png[/img][img]res://assets/textures/tile_normal_map_test_normal_map_texture.png[/img][img]res://assets/textures/tile_normal_map_test_normal_map_texture.png[/img][img]res://assets/textures/tile_normal_map_test_normal_map_texture.png[/img][wave amp=50 freq=2][rainbow freq=0.2 sat=7 val=1]
Tile Normal Map Test[/rainbow][/wave][/center]"
meta_underlined = false
text = "
Tile Normal Map Test"
scroll_active = false

[node name="Panel" type="PanelContainer" parent="UIPanel/MarginContainer/VBoxContainer/TitlePanelContainer/MarginContainer/VBoxContainer"]
self_modulate = Color( 0, 1, 0.976471, 1 )
margin_top = 125.0
margin_right = 746.0
margin_bottom = 246.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AboutRichTextLabel" type="RichTextLabel" parent="UIPanel/MarginContainer/VBoxContainer/TitlePanelContainer/MarginContainer/VBoxContainer/Panel"]
self_modulate = Color( 1, 0.913725, 0, 1 )
margin_left = 7.0
margin_top = 7.0
margin_right = 739.0
margin_bottom = 114.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center][i]
This is an experimental application that is intended and made
to observe visual effects with normal mapping
and Godot's built-in world environment glow properties,
and for fun.

Made by MumuNiMochii in 2021.[/i][/center]"
meta_underlined = false
text = "
This is an experimental application that is intended and made
to observe visual effects with normal mapping
and Godot's built-in world environment glow properties,
and for fun.

Made by MumuNiMochii in 2021."
scroll_active = false

[node name="VFXPanelContainer" type="PanelContainer" parent="UIPanel/MarginContainer/VBoxContainer"]
self_modulate = Color( 0, 1, 0.976471, 1 )
margin_top = 290.0
margin_right = 760.0
margin_bottom = 570.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="UIPanel/MarginContainer/VBoxContainer/VFXPanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 753.0
margin_bottom = 273.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UIPanel/MarginContainer/VBoxContainer/VFXPanelContainer/MarginContainer"]
margin_top = 10.0
margin_right = 746.0
margin_bottom = 256.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5
alignment = 1

[node name="MainRichTextLabel" type="RichTextLabel" parent="UIPanel/MarginContainer/VBoxContainer/VFXPanelContainer/MarginContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0.843137 )
light_mask = 0
margin_right = 746.0
margin_bottom = 113.0
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 11 )
custom_constants/line_separation = -30
bbcode_enabled = true
bbcode_text = "[center][wave amp=50 freq=2][rainbow freq=0.2 sat=7 val=1]
Visual Effects Level[/rainbow][/wave][/center]"
meta_underlined = false
text = "
Visual Effects Level"
scroll_active = false

[node name="SliderPanelContainer" type="PanelContainer" parent="UIPanel/MarginContainer/VBoxContainer/VFXPanelContainer/MarginContainer/VBoxContainer"]
self_modulate = Color( 0, 1, 0.976471, 1 )
margin_top = 118.0
margin_right = 746.0
margin_bottom = 178.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.45

[node name="VBoxContainer" type="VBoxContainer" parent="UIPanel/MarginContainer/VBoxContainer/VFXPanelContainer/MarginContainer/VBoxContainer/SliderPanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 739.0
margin_bottom = 53.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="UIPanel/MarginContainer/VBoxContainer/VFXPanelContainer/MarginContainer/VBoxContainer/SliderPanelContainer/VBoxContainer"]
margin_right = 732.0
margin_bottom = 16.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
custom_constants/margin_right = 270
custom_constants/margin_left = 270

[node name="LevelHSlider" type="HSlider" parent="UIPanel/MarginContainer/VBoxContainer/VFXPanelContainer/MarginContainer/VBoxContainer/SliderPanelContainer/VBoxContainer/MarginContainer"]
margin_left = 270.0
margin_right = 462.0
margin_bottom = 16.0
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_vertical = 3
min_value = 1.0
max_value = 3.0
value = 3.0

[node name="HBoxContainer" type="HBoxContainer" parent="UIPanel/MarginContainer/VBoxContainer/VFXPanelContainer/MarginContainer/VBoxContainer/SliderPanelContainer/VBoxContainer"]
margin_top = 21.0
margin_right = 732.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
custom_constants/separation = 50
alignment = 1

[node name="LowLabel" type="Label" parent="UIPanel/MarginContainer/VBoxContainer/VFXPanelContainer/MarginContainer/VBoxContainer/SliderPanelContainer/VBoxContainer/HBoxContainer"]
light_mask = 0
margin_left = 263.0
margin_right = 288.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Low"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MediumLabel" type="Label" parent="UIPanel/MarginContainer/VBoxContainer/VFXPanelContainer/MarginContainer/VBoxContainer/SliderPanelContainer/VBoxContainer/HBoxContainer"]
light_mask = 0
margin_left = 338.0
margin_right = 390.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Medium"
align = 1
valign = 1

[node name="HighLabel" type="Label" parent="UIPanel/MarginContainer/VBoxContainer/VFXPanelContainer/MarginContainer/VBoxContainer/SliderPanelContainer/VBoxContainer/HBoxContainer"]
light_mask = 0
margin_left = 440.0
margin_right = 468.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 14 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "High"
align = 1
valign = 1

[node name="AboutRichTextLabel" type="RichTextLabel" parent="UIPanel/MarginContainer/VBoxContainer/VFXPanelContainer/MarginContainer/VBoxContainer"]
self_modulate = Color( 1, 0.913725, 0, 1 )
margin_top = 183.0
margin_right = 746.0
margin_bottom = 246.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.55
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center][i]Adjust the visual effects by using the slider.[/i][/center]"
meta_underlined = false
text = "Adjust the visual effects by using the slider."
scroll_active = false

[node name="OtherProjectsPanelContainer" type="PanelContainer" parent="UIPanel/MarginContainer/VBoxContainer"]
self_modulate = Color( 0, 1, 0.976471, 1 )
margin_top = 580.0
margin_right = 760.0
margin_bottom = 860.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="UIPanel/MarginContainer/VBoxContainer/OtherProjectsPanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 753.0
margin_bottom = 273.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UIPanel/MarginContainer/VBoxContainer/OtherProjectsPanelContainer/MarginContainer"]
margin_top = 10.0
margin_right = 746.0
margin_bottom = 256.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5
alignment = 1

[node name="MainRichTextLabel" type="RichTextLabel" parent="UIPanel/MarginContainer/VBoxContainer/OtherProjectsPanelContainer/MarginContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0.843137 )
light_mask = 0
margin_right = 746.0
margin_bottom = 120.0
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 15 )
custom_constants/line_separation = -30
bbcode_enabled = true
bbcode_text = "[center][wave amp=50 freq=2][rainbow freq=0.2 sat=7 val=1]
Other Projects[/rainbow][/wave][/center]"
meta_underlined = false
text = "
Other Projects"
scroll_active = false

[node name="MarginContainer" type="MarginContainer" parent="UIPanel/MarginContainer/VBoxContainer/OtherProjectsPanelContainer/MarginContainer/VBoxContainer"]
margin_top = 125.0
margin_right = 746.0
margin_bottom = 246.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 150
custom_constants/margin_left = 150

[node name="VBoxContainer" type="VBoxContainer" parent="UIPanel/MarginContainer/VBoxContainer/OtherProjectsPanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 150.0
margin_right = 596.0
margin_bottom = 121.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5

[node name="HBoxContainer" type="HBoxContainer" parent="UIPanel/MarginContainer/VBoxContainer/OtherProjectsPanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 446.0
margin_bottom = 74.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="GithubRichTextLabel" type="RichTextLabel" parent="UIPanel/MarginContainer/VBoxContainer/OtherProjectsPanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
light_mask = 0
margin_right = 86.0
margin_bottom = 74.0
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center][url=https://github.com/MumuNiMochii][img=50x50]res://assets/logos/GitHub-Mark-Light-120px-plus.png[/img][/url][/center]"
meta_underlined = false
scroll_active = false

[node name="TwitterRichTextLabel" type="RichTextLabel" parent="UIPanel/MarginContainer/VBoxContainer/OtherProjectsPanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
light_mask = 0
margin_left = 90.0
margin_right = 176.0
margin_bottom = 74.0
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center][url=https://twitter.com/mumunimochii][img=70x50]res://assets/logos/2021 Twitter logo - blue.png[/img][/url][/center]"
meta_underlined = false
scroll_active = false

[node name="YouTubeRichTextLabel" type="RichTextLabel" parent="UIPanel/MarginContainer/VBoxContainer/OtherProjectsPanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0.784314 )
light_mask = 0
margin_left = 180.0
margin_right = 266.0
margin_bottom = 74.0
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center][url=https://www.youtube.com/channel/UCIbFglT-SmEPmeGTXxUipZA][img=60x50]res://assets/logos/youtube_social_icon_red.png[/img][/url][/center]"
meta_underlined = false
scroll_active = false

[node name="itchRichTextLabel" type="RichTextLabel" parent="UIPanel/MarginContainer/VBoxContainer/OtherProjectsPanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0.784314 )
light_mask = 0
margin_left = 270.0
margin_right = 356.0
margin_bottom = 74.0
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center][url=https://mumunimochii.itch.io][img=50x50]res://assets/logos/itchio-textless-black.svg[/img][/url][/center]"
meta_underlined = false
scroll_active = false

[node name="gotmRichTextLabel" type="RichTextLabel" parent="UIPanel/MarginContainer/VBoxContainer/OtherProjectsPanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0.862745 )
light_mask = 0
margin_left = 360.0
margin_right = 446.0
margin_bottom = 74.0
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center][url=https://gotm.io/mumunimochii-gotm-game-jam-entries][img=50x50]res://assets/logos/gotm_logo.png[/img][/url][/center]"
meta_underlined = false
scroll_active = false

[node name="AboutRichTextLabel" type="RichTextLabel" parent="UIPanel/MarginContainer/VBoxContainer/OtherProjectsPanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
self_modulate = Color( 1, 0.913725, 0, 1 )
margin_top = 79.0
margin_right = 446.0
margin_bottom = 121.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.55
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center][i]Version 1.1.0.[/i][/center]"
meta_underlined = false
text = "Version 1.1.0."
scroll_active = false

[node name="TitleSplash" type="Node2D" parent="."]

[node name="Panel" type="Panel" parent="TitleSplash"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1600.0
margin_bottom = 900.0
mouse_filter = 2
custom_styles/panel = SubResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="TitleSplash"]
size = Vector2( 1024, 600 )
own_world = true
world = SubResource( 17 )
transparent_bg = true
disable_3d = true
usage = 0
render_target_v_flip = true

[node name="TitleSplashSprite" type="Sprite" parent="TitleSplash/Viewport"]
texture = ExtResource( 9 )
centered = false

[node name="Sprite" type="Sprite" parent="TitleSplash"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 800, 450 )
texture = SubResource( 18 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_default_blend_time = 0.25
playback_speed = 2.0
anims/slide_in = SubResource( 19 )
anims/slide_out = SubResource( 20 )
anims/splash_in = SubResource( 21 )
anims/splash_out = SubResource( 22 )

[connection signal="pressed" from="UIPanel/TogglePanelButton" to="." method="_on_TogglePanelButton_pressed"]
[connection signal="value_changed" from="UIPanel/MarginContainer/VBoxContainer/VFXPanelContainer/MarginContainer/VBoxContainer/SliderPanelContainer/VBoxContainer/MarginContainer/LevelHSlider" to="YellowLight" method="_on_LevelHSlider_value_changed"]
[connection signal="value_changed" from="UIPanel/MarginContainer/VBoxContainer/VFXPanelContainer/MarginContainer/VBoxContainer/SliderPanelContainer/VBoxContainer/MarginContainer/LevelHSlider" to="WorldEnvironment" method="_on_LevelHSlider_value_changed"]
[connection signal="meta_clicked" from="UIPanel/MarginContainer/VBoxContainer/OtherProjectsPanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/GithubRichTextLabel" to="." method="_on_GithubRichTextLabel_meta_clicked"]
[connection signal="meta_clicked" from="UIPanel/MarginContainer/VBoxContainer/OtherProjectsPanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/TwitterRichTextLabel" to="." method="_on_TwitterRichTextLabel_meta_clicked"]
[connection signal="meta_clicked" from="UIPanel/MarginContainer/VBoxContainer/OtherProjectsPanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/YouTubeRichTextLabel" to="." method="_on_YouTubeRichTextLabel_meta_clicked"]
[connection signal="meta_clicked" from="UIPanel/MarginContainer/VBoxContainer/OtherProjectsPanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/itchRichTextLabel" to="." method="_on_itchRichTextLabel_meta_clicked"]
[connection signal="meta_clicked" from="UIPanel/MarginContainer/VBoxContainer/OtherProjectsPanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/gotmRichTextLabel" to="." method="_on_gotmRichTextLabel_meta_clicked"]
[connection signal="animation_finished" from="AnimationPlayer" to="CPUParticles2D" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
